--- a/javascript-avancado-i-aula1/aluraframe/client/index.html
+++ b/javascript-avancado-i-aula1/aluraframe/client/index.html
@@ -11,7 +11,7 @@
 
     <h1 class="text-center">Negociações</h1>
 
-    <form class="form">
+    <form class="form" onsubmit="negociacaoController.adiciona(event)">
 
         <div class="form-group">
             <label for="data">Data</label>
@@ -58,11 +58,12 @@
         <tfoot>
         </tfoot>
     </table>
+    <script type="text/javascript" src="js/app/helpers/DateHelper.js"></script>
     <script type="text/javascript" src="js/app/models/Negociacao.js"></script>
+    <script type="text/javascript" src="js/app/models/ListaNegociacoes.js"></script>
+    <script type="text/javascript" src="js/app/controllers/NegociacaoController.js"></script>    
     <script>
-        var n1 = new Negociacao(new Date(), 5, 700);
-
-        var amanha = new Date();
+        let negociacaoController = new NegociacaoController();
     </script>
 </body>
 </html>
