--- a/javascript-avancado-i-aula1/aluraframe/client/index.html
+++ b/javascript-avancado-i-aula1/aluraframe/client/index.html
@@ -10,7 +10,7 @@
 <body class="container">
 
     <h1 class="text-center">Negociações</h1>
-
+    <div id="mensagemView"></div>
     <form class="form" onsubmit="negociacaoController.adiciona(event)">
 
         <div class="form-group">
@@ -46,8 +46,11 @@
     <script type="text/javascript" src="js/app/helpers/DateHelper.js"></script>
     <script type="text/javascript" src="js/app/models/Negociacao.js"></script>
     <script type="text/javascript" src="js/app/models/ListaNegociacoes.js"></script>
+    <script type="text/javascript" src="js/app/models/Mensagem.js"></script>
+    <script type="text/javascript" src="js/app/views/View.js"></script>
     <script type="text/javascript" src="js/app/views/NegociacoesView.js"></script>
-    <script type="text/javascript" src="js/app/controllers/NegociacaoController.js"></script>    
+    <script type="text/javascript" src="js/app/views/MensagemView.js"></script>
+    <script type="text/javascript" src="js/app/controllers/NegociacaoController.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
